<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/spc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">


        <EditText
            android:id="@+id/editEmailLogar"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:drawablePadding="10dp"
            android:hint="@string/Login"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editSenhaLogar"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawablePadding="10dp"
            android:hint="@string/senha"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogar"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/entrar"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/esqueceu_a_senha" />

    <TextView
        android:id="@+id/txtEsqueceuSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/clique_aqui"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">


        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_Google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp" />



        <!--<com.facebook.login.widget.LoginButton-->
            <!--android:id="@+id/btn_Facebook"-->
            <!--android:layout_width="191dp"-->
            <!--android:layout_height="24dp"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_weight="2" />-->

    </LinearLayout>

</LinearLayout>