<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="139dp"
            android:layout_margin="16dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/nova" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nossa_arquitetura"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="12dp"
                android:scrollbars="vertical"
                android:text="@string/texto4"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="italic" />

        </LinearLayout>


        <view
            android:id="@+id/youtubePlay"
            class="com.google.android.youtube.player.YouTubePlayerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">


            <Button
                android:id="@+id/playButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play" />

            <ImageButton
                android:id="@+id/btn_Home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/Transparent"
                android:src="@drawable/home" />


        </LinearLayout>
    </LinearLayout>

</ScrollView>